# 42-minishell

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  external.supp  prova.txt  spiegazione.md
.github/workflows/: c-cpp.yml
docs/: casi particolari.txt  parser.txt  prova_push.txt  test_Sasha  tokenization_secondo_Sasha.txt
include/: libft.h  minishell.h
lib/libft/: .clangd  Makefile
lib/libft/src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_chartostr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+8 more)
lib/libft/src/ft_printf/: .clangd  ft_itoa_base.c  ft_printf.c  ft_printf_format.c  ft_printf_format_space_plus.c  ft_printf_get_strings.c  ft_printf_print.c  ft_uitoa.c  print_pointers.c  (+1 more)
src/: history.c  main.c  signals.c  utils.c
src/builtin/: cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c  utils.c
src/command/: cmd_check.c  cmd_debug.c  cmd_exec.c  cmd_exec_heredoc.c  cmd_exec_pipe.c  cmd_exec_pipe_cmd.c  cmd_exec_redirects.c  cmd_exec_redirects_handle.c  cmd_init.c  cmd_parser.c  cmd_utils.c  utils.c
src/env/: env.c
src/parser/: cmd_parser_args.c  cmd_parser_op.c  expansion.c  old_parser.c  pars_to_exec.c  parser.c  parser_extract.c  parser_redirects.c  parser_utils.c
test/: test_minishell.cpp
